--- a/app/views/footerFiles.jade
+++ b/app/views/footerFiles.jade
@@ -1,11 +1,12 @@
 script(type="text/javascript", src="//cdnjs.cloudflare.com/ajax/libs/socket.io/0.9.10/socket.io.min.js")
-script(type="text/javascript", src="/libraries/jquery-1.10.2.min.js")
+script(type="text/javascript", src="/libraries/jquery-1.11.0.min.js")
 script(type="text/javascript", src="/libraries/underscore-min.js")
 script(type="text/javascript", src="/libraries/backbone-min.js")
 script(type="text/javascript", src="/libraries/bootstrap/js/bootstrap.min.js")
 script(type="text/javascript", src="/libraries/sha1.js")
 script(type="text/javascript", src="/javascripts/socket.js")
 
+script(type="text/javascript", src="/javascripts/utilities/constants.js")
 script(type="text/javascript", src="/javascripts/utilities/cookies.js")
 script(type="text/javascript", src="/javascripts/utilities/crypto.js")
 script(type="text/javascript", src="/javascripts/utilities/dateTime.js")
