--- a/app/views/navbar.jade
+++ b/app/views/navbar.jade
@@ -15,7 +15,7 @@ nav#navbar.navbar.navbar-default.navbar-fixed-top(role="navigation")
             li
               a#userAccess(href="#")
           li
-            a#logOut(href="#") Logout
+            a#logOut(href="#") Log Out
       else
         form#logInForm.navbar-form.navbar-right(role="search")
           div.form-group
