--- a/app/views/userPage.jade
+++ b/app/views/userPage.jade
@@ -14,7 +14,7 @@ html
       div.container.notResponsive
         div.row
           div.col-xs-9
-          div.col-xs-3#sidebarFixed
+          div#sidebarFixed.col-xs-3
 
     div.container.notResponsive
       div.row
@@ -23,7 +23,7 @@ html
             div#requests
             div#requestStreamLoading
               img(src="/images/loading.gif")
-        div.col-xs-3#sidebarRelative
+        div#sidebarRelative.col-xs-3
           div#sidebar
             div#alerts
             div#userInfo
@@ -33,8 +33,8 @@ html
             form#requestForm
               p
                 strong Add Request
-              input.requestFormName.form-control(type='text', name='name', maxlength='100', placeholder='Add anonymous request...')
-              button#requestFormSubmit.btn.btn-schola.btn-xs(type='submit') Request
+              input.requestFormName.form-control(type="text", name="name", placeholder="Make anonymous request")
+              button#requestFormSubmit.btn.btn-schola.btn-xs(type="submit") Request
 
     script
       var app = app || {};
