Removed unneeded file, restyled some stuff

--- a/app/views/homePage.jade
+++ b/app/views/homePage.jade
@@ -26,12 +26,12 @@ html
           div#sidebar
             div#alerts
             div#trending
-              div.trendingTitle Trending Users
-              div#trendingUsers
-                div.trendingUser
+              div.trendingTitle Trending Publishers
+              div#trendingPublishers
+                div.trendingPublisher
                   span.glyphicon.glyphicon-user
                   a(href="/user/testingdude") testingdude
-                div.trendingUser
+                div.trendingPublisher
                   span.glyphicon.glyphicon-user
                   a(href="/user/testingdude2") testingdude2
 
