--- a/app/views/userPage.jade
+++ b/app/views/userPage.jade
@@ -32,8 +32,8 @@ html
               div.userDescription
             form#requestForm
               p
-                strong Add Request
-              input.requestFormName.form-control(type="text", name="name", placeholder="Make anonymous request")
+                strong Make Request
+              input.requestFormName.form-control(type="text", name="name", placeholder="Add anonymous request")
               button#requestFormSubmit.btn.btn-schola.btn-xs(type="submit") Request
 
     script
