--- a/app/views/userPage.jade
+++ b/app/views/userPage.jade
@@ -32,7 +32,7 @@ html
               div.userDescription
             form#requestForm
               p
-                strong Make Request
+                strong Add Request
               input.requestFormName.form-control(type="text", name="name", placeholder="Add anonymous request")
               button#requestFormSubmit.btn.btn-schola.btn-xs(type="submit") Request
 
