Finished frontend for trending publishers

--- a/app/views/footerFiles.jade
+++ b/app/views/footerFiles.jade
@@ -20,6 +20,7 @@ script(type="text/javascript", src="/javascripts/views/logInFormView.js")
 script(type="text/javascript", src="/javascripts/views/signUpFormView.js")
 script(type="text/javascript", src="/javascripts/views/logOutView.js")
 script(type="text/javascript", src="/javascripts/views/navbarView.js")
+script(type="text/javascript", src="/javascripts/views/trendingPublisherView.js")
 script(type="text/javascript", src="/javascripts/views/trendingView.js")
 script(type="text/javascript", src="/javascripts/views/userInfoView.js")
 script(type="text/javascript", src="/javascripts/views/sidebarView.js")
