--- a/app/views/homePage.jade
+++ b/app/views/homePage.jade
@@ -29,16 +29,10 @@ html
             div#trending
               div.trendingTitle Trending Publishers
               div#trendingPublishers
-                div.trendingPublisher
-                  span.glyphicon.glyphicon-user
-                  a(href="/user/testingdude") testingdude
-                div.trendingPublisher
-                  span.glyphicon.glyphicon-user
-                  a(href="/user/testingdude2") testingdude2
           if isLoggedIn
             unless isSatisfier
               div#recruit
-                a.btn.btn-schola.btn-block.btn-sm(href="#")
+                a.btn.btn-schola.btn-block.btn-sm(href="/recruit")
                   span.glyphicon.glyphicon-globe
                   | Schola Publisher Network
 
