Skeleton of publisher form done

--- a/app/views/errorPage.jade
+++ b/app/views/errorPage.jade
@@ -11,7 +11,7 @@ html
     div.container.notResponsive
       div.row
         div.col-xs-12
-          h1 Uh oh.
+          div.title Uh oh.
           p Looks like this page doesn't exist.
 
     script
