--- a/app/views/homePage.jade
+++ b/app/views/homePage.jade
@@ -33,7 +33,7 @@ html
             unless isSatisfier
               div#recruit
                 a.btn.btn-schola.btn-block.btn-sm(href="/recruit")
-                  span.glyphicon.glyphicon-globe
+                  span.glyphicon.glyphicon-send
                   | Schola Publisher Network
 
     script
