--- a/app/views/userPage.jade
+++ b/app/views/userPage.jade
@@ -31,8 +31,7 @@ html
                 span.glyphicon.glyphicon-user
               div.userDescription
             form#requestForm
-              p
-                strong Add Request
+              div.requestFormTitle Add Request
               input.requestFormName.form-control(type="text", name="name", placeholder="Add anonymous request")
               button#requestFormSubmit.btn.btn-schola.btn-xs(type="submit") Request
 
