--- a/public/stylesheets/navbar.css
+++ b/public/stylesheets/navbar.css
@@ -9,7 +9,7 @@
 .navbar-default .navbar-header .navbar-brand {
   color: #ffffff;
   background-color: #3c95d2;
-  font-family: 'Libre Baskerville', serif;
+  font-family: "Libre Baskerville", serif;
   font-weight: bold;
   height: 50px;
 }
