--- a/public/stylesheets/trending.css
+++ b/public/stylesheets/trending.css
@@ -1,10 +1,11 @@
 #trending {
-  font-weight: bold;
+  /*font-weight: bold;*/
   margin-bottom: 20px;
 }
 
 #trending .trendingTitle {
   font-size: 14px;
+  font-weight: bold;
   margin-bottom: 10px;
 }
 
@@ -12,6 +13,15 @@
   margin-bottom: 10px;
 }
 
+#trending .trendingPublisherName {
+  font-weight: bold;
+}
+
 #trending .trendingPublisher .glyphicon {
   margin-right: 10px;
+}
+
+#trending .trendingPublisher .badge {
+  float: right;
+  cursor: default;
 }
