Fixed bug with unable to log out on recruit or error pages

--- a/app/views/recruitPage.jade
+++ b/app/views/recruitPage.jade
@@ -24,14 +24,14 @@ html
             strong You
             | , among millions of 
             strong successful alumni
-            | , built an entire corpus of work and wisdom beating this system. Now it's locked up in your laptop, offline, and worth nothing. But it's 
+            | , built an entire corpus of work and expertise beating this system. Now that's locked up in your laptop, offline, and worth nothing. But it's 
             strong exactly what current students need.
           p
-            | Schola is the first platform that makes this kind of academic publishing scale. Whether you're ready to 
+            | Schola is the first platform that makes this breed of academic publishing scale. Whether you're ready to 
             strong cash out 
             | on your own corpus or 
             strong impact hundreds 
-            | of students in parallel, Schola Publisher Network is the place to start.
+            | of students at once, Schola Publisher Network is the place to start.
           p.closing Interested? Welcome aboard.
           div.input-group
             input.input-lg.form-control(type="text", placeholder="Your email address")
@@ -48,3 +48,5 @@ html
       };
 
     include footerFiles.jade
+    script
+      new app.NavbarView();
