--- a/app/views/userPage.jade
+++ b/app/views/userPage.jade
@@ -39,7 +39,7 @@ html
       var app = app || {};
       app.viewerData = {
         isLoggedIn: !{isLoggedIn},
-        isSatisfier: !{isSatisfier}
+        isPublisher: !{isPublisher}
       };
       app.pageData = !{data};
 
