--- a/app/views/errorPage.jade
+++ b/app/views/errorPage.jade
@@ -18,7 +18,7 @@ html
       var app = app || {};
       app.viewerData = {
         isLoggedIn: !{isLoggedIn},
-        isSatisfier: !{isSatisfier}
+        isPublisher: !{isPublisher}
       };
 
     include footerFiles.jade
