Re-enabled navbar

--- a/app/views/recruitPage.jade
+++ b/app/views/recruitPage.jade
@@ -41,7 +41,7 @@ html
                   span.glyphicon.glyphicon-send
                   | Submit
 
-    script
+    script.
       var app = app || {};
       app.viewerData = {
         isLoggedIn: !{isLoggedIn},
