--- a/app/views/userPage.jade
+++ b/app/views/userPage.jade
@@ -35,7 +35,7 @@ html
               input.requestFormName.form-control(type="text", name="name", placeholder="Add anonymous request")
               button#requestFormSubmit.btn.btn-schola.btn-xs(type="submit") Request
 
-    script
+    script.
       var app = app || {};
       app.viewerData = {
         isLoggedIn: !{isLoggedIn},
