--- a/app/views/homePage.jade
+++ b/app/views/homePage.jade
@@ -36,7 +36,7 @@ html
                   span.glyphicon.glyphicon-send
                   | Schola Publisher Network
 
-    script
+    script.
       var app = app || {};
       app.viewerData = {
         isLoggedIn: !{isLoggedIn},
