--- a/app/views/navbar.jade
+++ b/app/views/navbar.jade
@@ -11,7 +11,7 @@ nav#navbar.navbar.navbar-default.navbar-fixed-top(role="navigation")
     div.collapse.navbar-collapse
       if isLoggedIn
         div.nav.navbar-nav.navbar-right
-          if isSatisfier
+          if isPublisher
             li
               a#userAccess(href="#")
           li
