--- a/app/views/userPage.jade
+++ b/app/views/userPage.jade
@@ -32,8 +32,8 @@ html
               div.userDescription
             form#requestForm
               div.requestFormTitle Add Request
-              input.requestFormName.form-control(type="text", name="name", placeholder="Add anonymous request")
-              button#requestFormSubmit.btn.btn-schola.btn-xs(type="submit") Request
+              input.requestFormName.form-control(type="text", name="name", placeholder="New anonymous request")
+              button#requestFormSubmit.btn.btn-schola.btn-xs(type="submit") Submit
 
     script.
       var app = app || {};
