--- a/app/views/homePage.jade
+++ b/app/views/homePage.jade
@@ -43,4 +43,4 @@ html
       };
 
     include footerFiles.jade
-    script(type="text/javascript", src="/javascripts/app.js")
+    script(type="text/javascript", src="/javascripts/homePageApp.js")
