--- a/app/views/recruitPage.jade
+++ b/app/views/recruitPage.jade
@@ -49,6 +49,4 @@ html
       };
 
     include footerFiles.jade
-    script.
-      new app.NavbarView();
-      new app.RecruitFormView();
+    script(type="text/javascript", src="/javascripts/recruitPageApp.js")
