--- a/app/views/userPage.jade
+++ b/app/views/userPage.jade
@@ -44,5 +44,4 @@ html
       app.pageData = !{data};
 
     include footerFiles.jade
-    script(type="text/javascript", src="/javascripts/app.js")
-    script(type="text/javascript", src="/javascripts/userApp.js")
+    script(type="text/javascript", src="/javascripts/userPageApp.js")
