Got port to full names working, fixed minor bug with rrequestName

--- a/app/views/userPage.jade
+++ b/app/views/userPage.jade
@@ -27,7 +27,7 @@ html
           div#sidebar
             div#alerts
             div#userInfo
-              div.userUsername
+              div.userName
                 span.glyphicon.glyphicon-user
               div.userDescription
             form#requestForm
