Redid some recruit stuff

--- a/app/views/homePage.jade
+++ b/app/views/homePage.jade
@@ -33,7 +33,7 @@ html
             div#recruit
               a.btn.btn-schola.btn-block.btn-sm(href="/recruit")
                 span.glyphicon.glyphicon-send
-                | Schola Publisher Network
+                | Join Publisher Network
 
     script.
       var app = app || {};
