--- a/app/views/recruitPage.jade
+++ b/app/views/recruitPage.jade
@@ -33,7 +33,7 @@ html
             | on your own corpus or 
             strong impact hundreds 
             | of students at once, Schola Publisher Network is the place to start.
-          p.closing Interested? Welcome aboard.
+          p.closing Interested? Apply and join us.
           div.input-group
             input.input-lg.form-control(type="text", name="email", placeholder="Your email address")
             span.input-group-btn
