Added link icon to denote responses that are links

--- a/public/stylesheets/requestStream.css
+++ b/public/stylesheets/requestStream.css
@@ -37,6 +37,11 @@
   max-width: 90%;
 }
 
+.requestMain .requestName .glyphicon {
+  font-weight: bold;
+  font-size: 13px;
+}
+
 .requestMain .requestOrigin {
   margin-bottom: 15px;
   color: #999999;
