Fix up some CSS so that long publisher names look better

--- a/app/views/userPage.jade
+++ b/app/views/userPage.jade
@@ -28,7 +28,8 @@ html
             div#alerts
             div#userInfo
               div.userName
-                span.glyphicon.glyphicon-user
+                div.glyphicon.glyphicon-user
+                div.userNameText
               div.userDescription
             form#requestForm
               div.requestFormTitle Add Request
