--- a/app/views/recruitPage.jade
+++ b/app/views/recruitPage.jade
@@ -14,7 +14,7 @@ html
         div.col-xs-4
           div#alerts
         form#recruitForm.col-xs-8
-          div.title Schola is disrupting education.
+          div.title Schola is disrupting academic publishing.
             div
               strong Join us.
           p
