Fix minor detail with recruitPage due to mobile optimization

--- a/app/views/recruitPage.jade
+++ b/app/views/recruitPage.jade
@@ -10,9 +10,9 @@ html
     
   body
     include navbar.jade
-    div.container.notResponsive
+    div.container
       div.row
-        form#recruitForm.col-xs-8
+        form#recruitForm.col-md-9
           div.title Schola is disrupting academic publishing.
             div
               strong Join us.
@@ -39,8 +39,7 @@ html
               button#recruitFormSubmit.btn.btn-schola.btn-lg(type="submit")
                 span.glyphicon.glyphicon-send
                 | Submit
-        div.col-xs-1
-        div.col-xs-3
+        div.col-md-3
           div#alerts
 
     script.
