--- a/app/views/homePage.jade
+++ b/app/views/homePage.jade
@@ -25,10 +25,12 @@ html
                   | Join Publisher Network
         div.col-md-9.col-md-pull-3
           div#requestStream
+            div#requestStreamFilter.filterUnanswered
+              div.tab#tabAnswered Answered
+              div.tab#tabUnanswered Unanswered
             div#requests
             div.row
-              div.col-sm-5
-              div#requestStreamLoading.col-sm-7
+              div#requestStreamLoading
                 img(src="/images/loading.gif")
 
     script.
