--- a/public/stylesheets/requestStream.css
+++ b/public/stylesheets/requestStream.css
@@ -1,3 +1,41 @@
+#requestStreamFilter {
+  text-align: center;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+#requestStreamFilter.filterAnswered {
+  border-bottom: 5px solid #3c95d2;
+}
+
+#requestStreamFilter.filterUnanswered {
+  border-bottom: 5px solid #eeeeee;
+}
+
+#requestStreamFilter .tab {
+  padding-top: 10px;
+  cursor: pointer;
+  height: 35px;
+  width: 50%;
+  display: inline-block;
+  -webkit-border-top-right-radius: 10px;
+     -moz-border-top-right-radius: 10px;
+          border-top-right-radius: 10px;
+  -webkit-border-top-left-radius: 10px;
+     -moz-border-top-left-radius: 10px;
+          border-top-left-radius: 10px;
+}
+
+#requestStreamFilter .tab#tabAnswered {
+  background-color: #3c95d2;
+  color: #ffffff;
+}
+
+#requestStreamFilter .tab#tabUnanswered {
+  background-color: #eeeeee;
+  color: #2e89c7;
+}
+
 .request {
   margin-bottom: 20px;
 }
