Tabs and filtering seem to be up and working

--- a/app/views/homePage.jade
+++ b/app/views/homePage.jade
@@ -25,7 +25,7 @@ html
                   | Join Publisher Network
         div.col-md-9.col-md-pull-3
           div#requestStream
-            div#requestStreamFilter.filterUnanswered
+            div#requestStreamFilter.filterAnswered
               div.tab#tabAnswered Answered
               div.tab#tabUnanswered Unanswered
             div#requests
