--- a/app/views/homePage.jade
+++ b/app/views/homePage.jade
@@ -25,9 +25,9 @@ html
                   | Join Publisher Network
         div.col-md-9.col-md-pull-3
           div#requestStream
-            div#requestStreamFilter.filterAnswered
-              div.tab#tabAnswered Answered
-              div.tab#tabUnanswered Unanswered
+            div#requestStreamFilter
+              div#tabAnswered.tab.tabSelected Answered
+              div#tabUnanswered.tab Unanswered
             div#requests
             div.row
               div#requestStreamLoading
