--- a/app/views/launchPage.jade
+++ b/app/views/launchPage.jade
@@ -20,7 +20,7 @@ html
             p Thank you for testing with us.
             hr
             p Getting into college has become absurdly competitive. Acceptance rates for elite schools have fallen to single digits, and getting good grades simply isn't enough anymore.
-            p At Schola, we're building the best academic resource you could dream of having access to. Our publisher network of recent college admits defeated the college admissions system. Let us help you do the same.
+            p At Schola, we're building the best academic resource you could dream of having access to. Our network of recent college admits defeated the college admissions system. Let us help you do the same.
             p.closing Want early access? Let's get in touch.
             div.input-group
               input.input-lg.form-control(type="text", name="email", placeholder="Your email address")
